fix(Toasts): align items with the side we're anchored to

--- a/stories/Toasts.scss
+++ b/stories/Toasts.scss
@@ -11,8 +11,15 @@
   position: fixed;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
   gap: $margin;
+
+  &.start {
+    align-items: flex-start;
+  }
+
+  &.end {
+    align-items: flex-end;
+  }
 
   > .toast {
     display: inline-flex;
